--- a/custom-template/templates/deployment.yaml
+++ b/custom-template/templates/deployment.yaml
@@ -1,3 +1,53 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: {{ .Values.name }}
+#   namespace: {{ .Values.namespace }}
+#   labels:
+#     app: {{ .Values.name }}
+# spec:
+#   replicas: {{ (.Values.scaling).replicas | default 1 }}
+#   selector:
+#     matchLabels:
+#       app: {{ .Values.name }}
+#   template:
+#     metadata:
+#       labels:
+#         app: {{ .Values.name }}
+#     spec:
+#       containers:
+#         - name: {{ .Values.name }}
+#           image: "{{ .Values.general.image }}:{{ .Values.general.version }}"
+#           {{- if ((.Values.networking).expose) }}
+#           ports:
+#             - name: http
+#               containerPort: {{ .Values.networking.port | default 80 }}
+#               protocol: TCP
+#           {{- end }}
+          
+#           env:
+#           {{- if ((.Values.general).environment) }}
+#           {{- range $key, $value := (.Values.general).environment }}
+#             - name: {{ $key }}
+#               value: {{ $value | quote }}
+#           {{- end }}
+#           {{- end }}
+#           {{- if or ((.Values.scaling).resources).memory ((.Values.scaling).resources).cpu }}
+#           resources:
+#             {{- if ((.Values.scaling).resources).memory }}
+#             limits:
+#               memory: {{ ((.Values.scaling).resources).memory }}Gi
+#             {{- end }}
+#             {{- if or ((.Values.scaling).resources).memory ((.Values.scaling).resources).cpu }}
+#             requests:
+#               {{- if ((.Values.scaling).resources).cpu }}
+#               cpu: {{ ((.Values.scaling).resources).cpu }}
+#               {{- end }}
+#               {{- if ((.Values.scaling).resources).memory }}
+#               memory: {{ ((.Values.scaling).resources).memory }}Gi
+#               {{- end }}
+#             {{- end }}
+#           {{- end }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -6,7 +56,7 @@ metadata:
   labels:
     app: {{ .Values.name }}
 spec:
-  replicas: {{ (.Values.scaling).replicas | default 1 }}
+  replicas: {{ .Values.scaling.replicas | default 1 }}
   selector:
     matchLabels:
       app: {{ .Values.name }}
@@ -18,7 +68,8 @@ spec:
       containers:
         - name: {{ .Values.name }}
           image: "{{ .Values.general.image }}:{{ .Values.general.version }}"
-          {{- if ((.Values.networking).expose) }}
+          
+          {{- if .Values.networking.expose }}
           ports:
             - name: http
               containerPort: {{ .Values.networking.port | default 80 }}
@@ -26,25 +77,41 @@ spec:
           {{- end }}
           
           env:
-          {{- if ((.Values.general).environment) }}
-          {{- range $key, $value := (.Values.general).environment }}
-            - name: {{ $key }}
-              value: {{ $value | quote }}
+          {{- if .Values.general.environment }}
+          {{- toYaml .Values.general.environment | indent 12 }}
           {{- end }}
-          {{- end }}
-          {{- if or ((.Values.scaling).resources).memory ((.Values.scaling).resources).cpu }}
+
           resources:
-            {{- if ((.Values.scaling).resources).memory }}
+            {{- if .Values.scaling.resources.memory }}
             limits:
-              memory: {{ ((.Values.scaling).resources).memory }}Gi
+              memory: {{ .Values.scaling.resources.memory }}Gi
             {{- end }}
-            {{- if or ((.Values.scaling).resources).memory ((.Values.scaling).resources).cpu }}
+            {{- if .Values.scaling.resources.cpu }}
             requests:
-              {{- if ((.Values.scaling).resources).cpu }}
-              cpu: {{ ((.Values.scaling).resources).cpu }}
-              {{- end }}
-              {{- if ((.Values.scaling).resources).memory }}
-              memory: {{ ((.Values.scaling).resources).memory }}Gi
-              {{- end }}
+              cpu: {{ .Values.scaling.resources.cpu }}
             {{- end }}
-          {{- end }}
+
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds | default 5 }}
+            periodSeconds: {{ .Values.probes.readiness.periodSeconds | default 10 }}
+            failureThreshold: {{ .Values.probes.readiness.failureThreshold | default 3 }}
+
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds | default 10 }}
+            periodSeconds: {{ .Values.probes.liveness.periodSeconds | default 20 }}
+
+          startupProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: {{ .Values.probes.startup.initialDelaySeconds | default 10 }}
+            periodSeconds: {{ .Values.probes.startup.periodSeconds | default 10 }}
+            failureThreshold: {{ .Values.probes.startup.failureThreshold | default 30 }}
+      {{ end }}
+    {{ end }}
