--- a/custom-template/Chart.yaml
+++ b/custom-template/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: custom-template
-description: Demo chart with more properties to chose from
+description: Custom chart with more properties to chose for your pods.
 
 type: application
 
