--- a/custom-template/templates/deployment.yaml
+++ b/custom-template/templates/deployment.yaml
@@ -58,6 +58,7 @@ spec:
               port: http
             initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
             periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
+            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
           {{- end }}
 
           {{- if .Values.probes.startup.enabled }}
