--- a/custom-template/values.yaml
+++ b/custom-template/values.yaml
@@ -13,18 +13,21 @@ scaling:
     memory: 512
 
 probes:
-  enabled: true
+  enabled: false
   startup:
+    enabled: false
     path: "/"
     initialDelaySeconds: 5
     periodSeconds: 10
     failureThreshold: 3
   liveness:
+    enabled: false
     path: "/"
     initialDelaySeconds: 10
     periodSeconds: 20
     failureThreshold: 3
   readiness:
+    enabled: false
     path: "/"
     initialDelaySeconds: 5
     periodSeconds: 10
